# subtitle-ninja

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
api/: main.py
demo/: README.md
static/: app.js  index.html
workflows/: ass_renderer.py  celery_app.py  process_video.py  style_config.py
