[project]
name = "subtitle-ninja"
version = "0.1.0"
description = "Subtitle Media Toolkit - MVP for video subtitle processing"
authors = [{name = "User", email = "user@example.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "celery>=5.4.0",
    "redis>=5.2.0",
    "minio>=7.2.10",
    "openai-whisper>=20240930",
    "ffmpeg-python>=0.2.0",
    "Pillow>=11.0.0",
    "aiofiles>=24.1.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]